header-labels: fixed small spacing issues

--- a/rhodecode/public/css/summary.less
+++ b/rhodecode/public/css/summary.less
@@ -233,7 +233,8 @@
 
         .right-label-summary {
             float: left;
-            margin-top: 7px;
+            margin-top: 0px;
+            line-height: 2em;
             width: ~"calc(100% - 160px)";
         }
     }
@@ -255,7 +256,8 @@
 
         .right-label-summary {
             float: left;
-            margin-top: 7px;
+            margin-top: 0px;
+            line-height: 2em;
         }
     }
 
